--- a/style.css
+++ b/style.css
@@ -1,29 +1,57 @@
+@import url('https://fonts.googleapis.com/css2?family=Comic+Neue&family=Roboto:wght@400;900&display=swap');
+*{
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+}
+
 body {
   text-align: center;
+  font-family: 'Comic Neue', cursive;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: url(./img/fondo.avif) no-repeat center center/cover;
 }
-
+.container{
+    display:flex;
+    align-content: center;
+    flex-direction: column;
+    background-color: whitesmoke;
+    border-radius: 20px;
+    padding:60px;
+    margin:60px;
+    height: 400px;
+    width: 600px;
+}
 h1 {
   color: #333;
-  font-family: Arial, sans-serif;
+  margin:5px;
 }
-
+p{
+    margin: 10px;
+}
 input {
-  padding: 5px;
   font-size: 16px;
+  padding:10px;
 }
 
 button {
-  padding: 8px 12px;
+  margin:10px auto;
+  padding:10px;
   background-color: #4caf50;
   color: white;
   border: none;
-  font-size: 16px;
+  font-size: 20px;
   cursor: pointer;
+  border-radius: 10px;
+  width: 100px;
 }
 
 #mensaje {
   color: #333;
   font-family: Arial, sans-serif;
   font-size: 18px;
-  margin-top: 20px;
+
 }
